关闭奶牛快传相关的东西

--- a/.github/workflows/build-openwrt-r2s.yml
+++ b/.github/workflows/build-openwrt-r2s.yml
@@ -195,9 +195,9 @@ jobs:
       run: |
         echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H%M")"
         touch release.txt
-        [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
+        #[ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer](${{ steps.cowtransfer.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer](${{ steps.wetransfer.outputs.url }})" >> release.txt
-        [ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer base](${{ steps.cowtransferbase.outputs.url }})" >> release.txt
+        #[ $UPLOAD_COWTRANSFER = true ] && echo "🔗 [Cowtransfer base](${{ steps.cowtransferbase.outputs.url }})" >> release.txt
         [ $UPLOAD_WETRANSFER = true ] && echo "🔗 [WeTransfer base](${{ steps.wetransferbase.outputs.url }})" >> release.txt
         echo "::set-output name=status::success"
 
